Work done for the day

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -1,13 +1,12 @@
 \section{Low Resource Languages: An Overview}\label{sec:endlang}
-% The State of endangered languages and computational linguistics
 
-In this section, I will outline the state of endangered languages. %Specifically, I will talk about how many languages there are in the world, using Ethnologue.
+In this section, I will outline the state of low resource languages. First I will define contrasting and distinct terms which are often used to these languages, which inform how one can approach a language. Then, I will talk about language demographics and metrics used to categorise languages as having low resources, before moving on to discuss digital presence as a term for understanding language endangerment today. Finally, I'll go into depth further about the current state of language diversity (both in research and demographically), and mention the various different groups who work on and fund low resource development, and how considering their impact influences a language's digital presence.
 
 \subsection{Definitions}
 
 Before going further, it makes sense to define what the terms \emph{endangered}, \emph{minority}, \emph{low-} and \emph{under-resourced}, and other terms like \emph{threatened} languages mean. Ultimately, they refer as a whole to languages which are in peril in some way. However, there have slightly different meanings in different contexts, and according to the scale and metric applied.
 
-In this section, I will define these terms: endangered, minority, low-resource, under-resourced, threatened, moribund, dormant, extinct, computer (such as JavaScript), revitalised, and constructed languages. This will help inform why I've chosen to focus on \emph{low-resource} languages (LRLs), and specifically low-resource natural languages with living populations.
+In this section, I will define these terms: endangered, minority, low-resource, under-resourced, threatened, incident, surprise, moribund, dormant, extinct, historic, revitalised, computer (such as JavaScript), and constructed languages. This will help inform why I've chosen to focus on \emph{low resource} languages (LRLs), and specifically low resource natural languages with living populations.
 
 % \subsubsection{Endangered Languages}
 %
@@ -17,17 +16,19 @@ In this section, I will define these terms: endangered, minority, low-resource, 
 %
 % Some languages lose all of their speakers, but may exist in another form. An example is Latin, which (excluding small communities of humanities scholars, amateurs, and priests) is almost exclusively used today only in written form, and normally read and not written.
 %
-% \subsubsection{Minority languages}
-%
-% Minority languages are are spoken by a stable, but small, population (for example, Maltese or Hawai'ian); and low- or under-resourced languages, which are spoken by a significant population but under-represented on the web (for instance, Quechua). These languages share certain characteristics in common; the most pertinent is sparse data and a lack of resources, ranging from spell-checkers to grammars to machine translation corpora. Other under-resourced languages that do not fall under this list include constructed languages (for instance, Klingon or Na'vi), computer languages (for instance, Javascript or Lua), and extinct languages that are so sparse as to be rendered computationally irrelevant for most purposes (for instance, Tocharian).
+\subsubsection{Minority languages}
+
+% Minority languages are are spoken by a stable, but small, population (for example, Maltese or Hawai'ian); and low or under resourced languages, which are spoken by a significant population but underrepresented on the web (for instance, Quechua). These languages share certain characteristics in common; the most pertinent is sparse data and a lack of resources, ranging from spell-checkers to grammars to machine translation corpora. Other under-resourced languages that do not fall under this list include constructed languages (for instance, Klingon or Na'vi), computer languages (for instance, Javascript or Lua), and extinct languages that are so sparse as to be rendered computationally irrelevant for most purposes (for instance, Tocharian).
 %
 % \subsubsection{Low and Under Resourced Languages}
 %
 % \subsubsection{Other terms}
 %
+% - incident and surprise languages
 % - Computer languages
 % - Constructed languages
 % - Extinct languages
+% - Historic languages (Old Swedish, https://spraakbanken.gu.se/swe/forskning/diabase)
 % - Moribund languages
 % - Sleeping languages
 
@@ -49,10 +50,15 @@ There are various metrics would can be used to assess language health. In this s
 
 \subsection{Digital presence}
 
+
+
 In this section, I am going to explain what digital presence is. This is more than just defining language endangerment - instead, this is about how do we quantify a language's existence digitally, either on the web or offline in archives.
 
 Few of the metrics above take into account the level of digital literacy for a language. The possibility for a language to digitally ascend has been held up as a key component of judging a language's vitality by \citet{kornai2013digital}. %Reword wow
 % Describe Kornai
+%% Watch this video http://videolectures.net/metaforum2012_kornai_language/
+
+%% Mention https://hlt.bme.hu/en/dld/
 
 I'll describe his assessment here, and explain why an alternative assessment would also be good. For instance, Wikipedia is, in my opinion, not a good judge of a language's health, as it is a closed ecosystem with diminishing returns for users who are bilingual.
 
@@ -111,6 +117,31 @@ Here, I will explain briefly who makes language resources for these languages. I
 %
 % These groups normally do not have access to large amounts of corpora, computational resources (such as servers, grids, or databanks), or, most importantly, manpower, time, and money. They are more often goal driven. For instance, Wycliffe %\TODO CITE
 % translators are most interested in developing language literacy in order to translate the Bible into a language for first language speakers; they are often less interested in machine translation, Facebook groups, or developing literacy for schools unless it helps them towards this end. Native developers are normally more interested in developing apps or websites for locals, but they are often less interested in larger dictionaries, speech to text or text to speech resources, or use cases outside of their individual ken. Finally, academic staff are often forced to be myopic in scope in order to publish academically for their wider industry, and are less able to easily embark on decade-long timelines to developer singular resources. They are also often financially fragile, and depend on local investors or governmental budgets and stipends to fund their research, all of which often work on shorter timescales than missionaries or first language developers, who normally devote their entire lives to a particular language group. Finally, academics are often individual workers, working on a language family or small group at the expense of related languages, as they need are driven by the publish-or-perish academic market and do not usually have large amounts of funding for multilingual efforts.
+
+% SIGUL http://www.elra.info/en/sig/sigul/
+
+%Include Elsnet here
+%% From http://www.elsnet.org/index.html
+% % The main objective of ELSNET-4 is to continue to advance Human Language Technologies by means of the operation of a network - ELSNET - encompassing a cross-section of private and public research centres actively engaged in research, development, integration or deployment. The network currently comprises 134 organisations in 27 countries, including the major players of Europe.
+% % The network's collective knowledge and expertise form the basis of a number of actions and services aiming at improving Europe's competitive position and at increasing awareness and take-up of Human Language Technologies. Activities are designed to have an impact both within and outside the network and both during and after the lifetime of the project.
+% %
+% % ELSNET positions itself in an international context, both in relation to Northern America and the Far East, and to Central and Eastern European and Mediterranean countries.
+% %
+% % The work is focused around four main themes:
+% %
+% % Training
+% % through summer schools and other training events and the operation of a Web directory of training opportunities and resources
+% % Roadmapping
+% % technological roadmaps for priority subareas of Human Language Technologies
+% % Information
+% % Dissemination
+% % through a Web site for exchange of knowledge and expertise, a directory of experts, electronic mailing lists and a quarterly newsletter
+% % Language Resources,
+% % Standards and Evaluation
+% % a roadmap for resources, internationalization initiatives and the production of a map of the international resources landscape
+
+% Also include ELDA http://www.elda.org/en/catalogues/language-resources-announcements/
+%% The European Language Resources Association (ELRA) is a non-profit making organisation founded by the European Commission in 1995, with the mission of providing a clearing house for language resources and promoting Human Language Technologies (HLT).
 
 \subsection{Language research funding}
 
