--- a/4-open-source-for-end-langs.tex
+++ b/4-open-source-for-end-langs.tex
@@ -9,6 +9,14 @@ First, I am going to talk about BLARK - the Basic LAnguage Resource Kit proposed
 
 I'll then mention tools here that can be used after a language has some digital presence - basically, what makes an LRL a resourced language.
 
+%% http://www.blark.org/
+%% Blark:  The BLARK concept was defined in a joint initiative between ELSNET (European Network of Excellence in Language and Speech) and ELRA (European Language Resources Association) [Krauwer, 1998] and first launched with a Dutch initiative called Dutch Human Language Technologies Platform that was initiated in April 1999. Then, in the framework of the ENABLER thematic network (European National Activities for Basic Language Resources -Action Line: IST-2000-3.5.1), ELDA elaborated a report defining a (minimal) set of LRs to be made available for as many languages as possible and mapping the actual gaps that should be filled in so as to meet the needs of the HLT field.
+
+%% http://www.elsnet.org/dox/blark.html
+
+%% Quote some BLARK papers from various languages - relatively easy to find papers.
+
+
 \subsection{NLTK and other open source libraries}
 
 Here, I'll explain some open source resources that can be used to bootstrap development; for instance, \href{NLTK (Natural Language Toolkit)}{http://nltk.org/}, a free and open source library which uses the Python language by \citet{bird2006nltk}, and enables users to interface with over fifty different corpora and lexical resources.
@@ -30,6 +38,9 @@ Here, I'll explain some open source resources that can be used to bootstrap deve
 % - Lack of sharing code or storing it usefully, due to factors: funding, academic cycle, inability, scope, lack of knowledge of domain
 
 % - Specific examples of cross-language applicability of an open source coding library (such as NLTK, or more specifically, family-related usage of parsers or MT models), and what that says about the incentives and use cases for open source libraries.
+
+%% Mention LoReHLT https://www.nist.gov/itl/iad/mig/lorehlt-evaluations
+%% The tools used here are permissively licenses and publicly available.
 
 \subsection{A Database for Open Source Code}\label{sec:solutions}
 
