--- a/5-case-studies.tex
+++ b/5-case-studies.tex
@@ -5,6 +5,8 @@ Scottish Gaelic is a Celtic language spoken mainly in the United Kingdom, which 
 
 As it is similar to Irish, it is a good example of how code from related languages can be used to bootstrap efforts to build code for its own language. I'll talk in depth about the language, its structure and grammar as related to code, its users and their use cases, and efforts to use code to make Scottish Gaelic digitally ascend.
 
+%% Mention Ceitidh https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh
+
 \subsection{Naskapi}
 
 % \subsubsection{Language Background}
