--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -79,7 +79,7 @@ I'll describe his assessment here, and explain why an alternative assessment wou
 % \item All normal characters are available in Unicode.
 % \item There is a growing corpus of written documents in the language.
 % \item There are users who consistently use the language digitally.
-% \item There is a formalized spelling system.
+% \item There is a formalised spelling system.
 % \item There is a Bible translation. %Write about Wycliffe and SIL
 % \item There are non-electronic documents.
 % \item There is a dictionary.
@@ -138,7 +138,7 @@ Here, I will explain briefly who makes language resources for these languages. I
 % % through a Web site for exchange of knowledge and expertise, a directory of experts, electronic mailing lists and a quarterly newsletter
 % % Language Resources,
 % % Standards and Evaluation
-% % a roadmap for resources, internationalization initiatives and the production of a map of the international resources landscape
+% % a roadmap for resources, internationalisation initiatives and the production of a map of the international resources landscape
 
 % Also include ELDA http://www.elda.org/en/catalogues/language-resources-announcements/
 %% The European Language Resources Association (ELRA) is a non-profit making organisation founded by the European Commission in 1995, with the mission of providing a clearing house for language resources and promoting Human Language Technologies (HLT).
