--- a/5-case-studies.tex
+++ b/5-case-studies.tex
@@ -32,7 +32,7 @@ In October 2017 I travelled to Schefferville and interviewed linguists working o
 % The linguists use the Fieldworks Language Explorer (FLEx) \footnote{\href{https://software.sil.org/fieldworks/}{https://software.sil.org/fieldworks/}} to document new linguistic terms. FLEx was developed by SIL International, and provides linguists with an out-of-the-box solution for recording linguistics terms using interlinear glossed text. It is also open source, and available on GitHub \footnote{\href{https://github.com/sillsdev/FieldWorks}{https://github.com/sillsdev/FieldWorks}}. Users can export as a PDF (among other file formats), or export words to an online interface known as Webonary \footnote{\href{https://www.webonary.org/configuring-the-dictionary-in-flex/}{https://www.webonary.org/configuring-the-dictionary-in-flex/}}.
 % This allows language workers to automatically create a useable, free dictionary for members of the community.
 %
-% Naskapi uses the Innuit syllabics spelling system \cite{wals-141},
+% Naskapi uses the Inuit syllabics spelling system \cite{wals-141},
 % as well as two other roman-based systems with only minor differences. For instance, a macron, such as \^u is used in place of a double \emph{uu} to indicate vowel length. Computational writing using the syllabic system is possible by using Keyman \footnote{\href{https://keyman.com/}{https://keyman.com/}}, (free, open source software available on GitHub \footnote{\href{https://github.com/keymanapp}{https://github.com/keymanapp}})
 % which must be installed manually on a computer. It allows a user to type roman letters which are converted to the right syllabic phrase, and is forgiving for phonemic variants. For instance, "ju", "chu", "tchu" and so on might all be interpreted and replaced by the appropriate syllabic. %Add syllabic
 % %% Is this even possible in LaTeX
