General wording and some better citations

--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,67 @@
   year={2014}
 }
 
+@article{gilRiau,
+  title={What is {Riau} {Indonesian}?},
+  author={Gil, David},
+  journal={Studies in Malay and Indonesian Linguistics},
+  year={2009}
+}
+
+@article{warner2007ethics,
+  title={Ethics and revitalization of dormant languages: The Mutsun language},
+  author={Warner, Natasha and Luna, Quirina and Butler, Lynnika},
+  journal={Language Documentation \& Conservation},
+  volume={1},
+  number={1},
+  pages={1--1},
+  year={2007},
+  publisher={Directory of Open Access Journals}
+}
+
+@article{clague2009manx,
+  title={Manx language revitalization and immersion education},
+  author={Clague, Marie and others},
+  journal={E-Keltoi: Journal of Interdisciplinary Celtic Studies},
+  volume={2},
+  pages={165--198},
+  year={2009}
+}
+
+@inproceedings{wilson2008revitalization,
+  title={The revitalization of the Manx language and culture in an era of global change},
+  author={Wilson, Gary N},
+  booktitle={Proceedings of the Third International Small Island Cultures Conference},
+  pages={74--81},
+  year={2008},
+  organization={Small Islands Cultures Research Initiative Sydney}
+}
+
+@book{kroeber1973ishi,
+  title={Ishi: Last of His Tribe},
+  author={Kroeber, T. and Robbins, R.},
+  isbn={9780808588153},
+  url={https://books.google.ca/books?id=hO9mAAAACAAJ},
+  year={1973},
+  publisher={Turtleback Books}
+}
+
+@article{hinton2001sleeping,
+  title={Sleeping languages: Can they be awakened},
+  author={Hinton, Leanne},
+  journal={The green book of language revitalization in practice},
+  pages={413--417},
+  year={2001},
+  publisher={Academic Press San Diego, CA}
+}
+
+@inproceedings{leonard2004acquisition,
+  title={The acquisition of Miami: Findings from a field study},
+  author={Leonard, Wesley},
+  booktitle={36th Annual Algonquian Conference, Madison, WI},
+  year={2004}
+}
+
 @inproceedings{CCURL,
 	Author    = {Littauer, Richard and Paterson III, Hugh},
 	Title     = {Open Source Code Serving Endangered Languages},
@@ -19,6 +80,29 @@
   Address   = {Portoro\v{z}, Slovenia},
 	Year      = {2016}
 }
+
+@article{bernard1992preserving,
+  title={Preserving language diversity},
+  author={Bernard, H},
+  journal={Human organization},
+  volume={51},
+  number={1},
+  pages={82--89},
+  year={1992},
+  publisher={Society for Applied Anthropology}
+}
+
+
+@article{krauss92,
+  title={The world's languages in crisis},
+  author={Krauss, Michael},
+  journal={Language},
+  volume={68},
+  number={1},
+  pages={4--10},
+  year={1992}
+}
+
 
 @incollection{chiarcos2013building,
   title={Building a Linked Open Data cloud of linguistic resources: Motivations and developments},
