The lions share of the definitions section

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -4,22 +4,42 @@ In this section, I will outline the state of low resource languages. First I wil
 
 \subsection{Definitions}
 
-Before going further, it makes sense to define what the terms \emph{endangered}, \emph{minority}, \emph{low-} and \emph{under-resourced}, and other terms like \emph{threatened} languages mean. Ultimately, they refer as a whole to languages which are in peril in some way. However, there have slightly different meanings in different contexts, and according to the scale and metric applied.
+Before going further, it makes sense to define what the terms \emph{endangered}, \emph{minority}, \emph{low} and \emph{under-resourced}, and other terms like \emph{threatened} mean when they refer to a language. Ultimately, they refer as a whole to languages which are in peril in some way. However, there have slightly different meanings in different contexts, and according to the scale and metric applied. 
 
-In this section, I will define these terms: endangered, minority, low-resource, under-resourced, threatened, incident, surprise, moribund, dormant, extinct, historic, revitalised, computer (such as JavaScript), and constructed languages. This will help inform why I've chosen to focus on \emph{low resource} languages (LRLs), and specifically low resource natural languages with living populations.
+In this section, I will generally define these terms: {\it endangered}, {\it moribund},  {\it extinct}, {\it dormant}, {\it revitalised}, {\it historic} and  {\it constructed} languages; {\it minority}, {\it low-resource}, {\it under-resourced}, {\it incident} and {\it surprise} languages; and finally {\it computer} or {\it computational} languages. This will help inform why I've chosen to focus on low resource languages, and specifically low resource natural languages with living populations. 
 
-% \subsubsection{Endangered Languages}
-%
-% % From https://github.com/RichardLitt/endangered-languages
-% \emph{Endangered languages} are human languages that are in danger of extinction. This is most often meant to mean that they have been identified as likely to lose all first language speakers in the near future, and thus cease functioning as a language with a population. %quote actual definition from somewhere else here
-% When first speakers die, it is almost inevitable that the language as a whole will also die. However, at times second language speakers - those who learned it later in life, but not as their first language from birth - can keep a language alive in some form. As well, written records can be used to revive a language - albeit in a new form, as intricacies of the grammar and vocabulary are inevitably lost when the chain of transmission is broken. An example here would be Manx, which lost all of its first language speakers, but has a considerable population today of second-language learners who are in turn teaching first language classes to children, in the hopes that they will pass the language along to their children.
-%
-% Some languages lose all of their speakers, but may exist in another form. An example is Latin, which (excluding small communities of humanities scholars, amateurs, and priests) is almost exclusively used today only in written form, and normally read and not written.
-%
-\subsubsection{Minority languages}
+\subsubsection{Endangered, revitalised, and extinct languages}
 
-% Minority languages are are spoken by a stable, but small, population (for example, Maltese or Hawai'ian); and low or under resourced languages, which are spoken by a significant population but underrepresented on the web (for instance, Quechua). These languages share certain characteristics in common; the most pertinent is sparse data and a lack of resources, ranging from spell-checkers to grammars to machine translation corpora. Other under-resourced languages that do not fall under this list include constructed languages (for instance, Klingon or Na'vi), computer languages (for instance, Javascript or Lua), and extinct languages that are so sparse as to be rendered computationally irrelevant for most purposes (for instance, Tocharian).
-%
+\emph{Endangered} languages are human languages that are in danger of extinction. The term is borrowed from the scientific literature describing animals; just as there exists as very real possibility that one day there will be no more Australasian Bittern specimens in the wilds of Australia, it is also possible that one day there may be no living speakers of Guugu Yimithirr. The term is not complete analogous; we can still read Tocharian texts, but Tocharian is not considered to be a living language, but {\it extinct}, as there are no speakers who use it regularly (and who are not scholars of obscure languages).
+ 
+Endangered languages are normally languages which have a high amount of speakers, and crucially are still teaching children the language. Children ensure that the language will live on to the next generation, and when this chain breaks, it is almost impossible to resurrect a language. A language would be endangered when it can be assumed that children will stop learning the language in the next hundred years (according to \citet{krauss92}). This can be difficult to judge, as the rate of deterioration can be high. For instance, Breton had over a million speakers in 1950, but today the numbers may be as low as 200,000. Its future is uncertain.
+ 
+ \emph{Moribund} languages are languages which are critically endangered, in that there are no children currently learning the language and using it frequently, although there are speakers. Ainu is a good example, with roughly ten native speakers still living, all of whom are over 80 years old. % Cite
+Haida has a similar amount of native speakers, but because of the amount of immersion programs, government-funded schools, and new venues for the language such as a motion picture filmed entirely in Haida with ethnically Haida actors who learned their lines from the elders, \footnote{\href{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}{https://www.nytimes.com/2017/06/11/world/americas/reviving-a-lost-language-of-canada-through-film.html}} it is not considered moribund.
+ 
+ \emph{Dormant} or {\it sleeping} languages are a stage beyond moribund languages. They have no living fluent speakers. This does not mean that the language is extinct. An example would be Mutsun, an Ohlone or Costanoan language formerly spoken near San Juan Bautista, California, whose last known fluent speaker Ascensión Solórsano passed away in 1930. However, in the late 90s, the Mutsun people (recognised formally as the Amah Mutsun Tribal Band)  began a revitalisation project using the extensive documentation left behind by linguists, anthropologists, and a Catholic mission priest, and now there are several conversational (albeit no fluent) speakers \citep{warner2007ethics}.
+ 
+Often, dormant languages only come to attention when they are considered a {\it revitalised} language. As \citet{warner2007ethics} notes, "Daryl Baldwin did indeed teach himself his then-dormant ancestral language, Myaamia, and is now raising his children largely in the language \citep{hinton2001sleeping, leonard2004acquisition}." Before Baldwin's work, Myaamia would have been considered a dormant language. Another example would be Manx, which lost all of its native speakers (the last being Ned Maddrell, who died in 1974 \citep{wilson2008revitalization}), but retained a score of second language speakers until today, when there are now immersion programs for children and over a thousand speakers of the language \citep{clague2009manx}. Between 1974 and a vague point somewhere in the past couple of decades where a child could consider Manx as their first language, the language was dormant; now, however, it is revitalised. 
+
+The most famous example of a revitalised language is Hebrew, with a speaking population of over eight million,\footnote{\href{https://www.ethnologue.com/language/heb}{https://www.ethnologue.com/language/heb}} which was formerly a literary language until revitalisation efforts began as a result of the creation of the Israeli state in the early 20th century, where it is now an official language and not in a state of endangerment. Hebrew is a good example of why the often synonymous terms such as 'endangered' and 'revitalised' should be considered as differentiable. 
+
+While on the subject of Hebrew, it is worth mentioning that the initial efforts to revitalise it were often maligned by both Jewish communities and linguists, for a variety of reasons. First, the Jewish faith had traditionally viewed Hebrew as a holy tongue, and many religiously conservative Jews objected to the sacrilegious use of it for day-to-day matters, preferring Aramaic or Yiddish. Many also objected on the grounds that its use was connected to Zionism (why is well beyond the scope of this thesis). But most pertinently, linguists objected because they viewed revitalisation as an impossibility. If the language was dead, than it would be impossible to accurately bring it back, as literary texts are not sufficient at adequately capturing all of the intricacies of a language and how it is used. Clearly, with millions of first language speakers, this is no longer a valid point; these critics can now claim that modern Hebrew is an imperfect descendant of historical Hebrew, which remains extinct, and they are likely right to do so. Revitalisation is not always an ethically or logistically clear process. 
+
+This is especially true for {\it constructed} languages, which are {\it a priori} languages invented by a linguist or a community without a historical speaking community. These may be created to be logically resistant to ambiguity (such as Loglan or Lobjan), for a specific artistic purpose (such as Na'vi or Klingon, meant to be spoken by aliens in science fiction), for scientific study (such as those used by evolutionary linguists for language games with participants to discern how language might have evolved, or such as used in the ubiquitous Wug test by scholars of language acquisition) or for political aims (such as Esperanto or Ido). Some of these may end up with thousands of speakers, including native speakers, and a huge surplus of computational resources. Na'vi has a dictionary that has been translated using computational tooling into over a dozen languages, for instance, and morphological parser, spell checkers, and a Facebook translator. These languages are not normally considered as revitalised or dormant, but are instead mostly ignored by the scientific community altogether. 
+
+Heading back to natural languages, Latin would largely not be considered a revitalised language either, although there are immersion schools and some daily usage by the Catholic liturgy. These domains are specific and do not extend into normal life, on the whole. This doesn't mean it doesn't have some computational resources, however - the ATMs in the Vatican use Latin as a user interface language.\footnote{\href{https://gizmodo.com/5905595/the-atms-in-vatican-city-speak-latin}{https://gizmodo.com/5905595/the-atms-in-vatican-city-speak-latin}} Old Swedish, likewise, has some computational resources (admittedly, from a single research group that is humorously aware of the lack of general global interest in the field).\footnote{\href{https://spraakbanken.gu.se/swe/forskning/diabase}{https://spraakbanken.gu.se/swe/forskning/diabase}} Latin would normally be considered a {\it historic} language, like Ancient Greek or Old English. All of these languages, while extinct themselves, have direct descendants (the Romance languages, modern Greek, and English, respectively), but this is not always the case. 
+
+Gothic is considered {\it extinct} today, as it has no direct descendants, although it is still studied, and although there is a small community of writers who continue to use the language, and at least one publishing company which publishes modern work in Gothic\footnote{\href{https://wordhoardpress.com}{https://wordhoardpress.com}} (incidentally run by, of all people, me). Not all languages have sufficient texts to be revitalised or used today: Etruscan, Minoan, and Pictish are good examples.
+
+One could argue that some languages may be considered dormant even if there are native speakers alive, if they do not speak the language. For instance, there are a few cases where a couple of speakers are left of a language, but they don't speak it to each other due to interpersonal differences. Most famously, there is the apocryphal story of Ayapeneco, where a global m\^eme ensued from an imagined feud between the last two speakers, to the point where Vodafone released a video claiming that they helped bring the men together to save the language (to the chagrin of actual linguists and anthropologists who had worked on the language for decades).\footnote{\href{http://stories.schwa-fire.com/who\_save\_ayapaneco\#chapter-113060}{http://stories.schwa-fire.com/who\_save\_ayapaneco\#chapter-113060}} %TODO Find Gary Snyder essay.
+Another example might be Ishi, the last Yahi and a speaker of Yana, who explained that he had no name, because there was no other Yahi man to formally introduce him. Ishi means 'man' in Yana \citep{kroeber1973ishi}.
+
+Such cases are extreme, and there will be exceptions to almost any of these categories. Even for living languages, questions of identification can be difficult. For instance, \cite{gilRiau} points to at least a dozen different interpretations of what Riau Indonesian might technically be. Defining language is beyond the scope of this thesis - however, I would be amiss not to mention this problem here. 
+
+\subsubsection{Minority, low and under resourced, and incident languages}
+
+{\it Minority} languages are are spoken by a stable, but small, population (for example, Maltese or Hawai'ian); and low or under resourced languages, which are spoken by a significant population but underrepresented on the web (for instance, Quechua). These languages share certain characteristics in common; the most pertinent is sparse data and a lack of resources, ranging from spell-checkers to grammars to machine translation corpora. Other under-resourced languages that do not fall under this list include constructed languages (for instance, Klingon or Na'vi), computer languages (for instance, Javascript or Lua), and extinct languages that are so sparse as to be rendered computationally irrelevant for most purposes (for instance, Tocharian).
+
 % \subsubsection{Low and Under Resourced Languages}
 %
 % \subsubsection{Other terms}
@@ -28,7 +48,7 @@ In this section, I will define these terms: endangered, minority, low-resource, 
 % - Computer languages
 % - Constructed languages
 % - Extinct languages
-% - Historic languages (Old Swedish, https://spraakbanken.gu.se/swe/forskning/diabase)
+% - Historic languages (Old Swedish, )
 % - Moribund languages
 % - Sleeping languages
 
