More writing, adding in Snyder

--- a/3-open-source.tex
+++ b/3-open-source.tex
@@ -1,3 +1,4 @@
+% !TEX root = thesis.tex
 \section{Open Source Code}\label{sec:open-source}
 
 Changing tack, here I will talk about what \emph{open source} means. This is important - otherwise, this thesis is just a rehash of current existing computational work on LRLs.
