--- a/4-open-source-for-end-langs.tex
+++ b/4-open-source-for-end-langs.tex
@@ -1,3 +1,4 @@
+% !TEX root = thesis.tex
 \section{Open Source Code for Low Resource Languages}\label{sec:endlangcode}
 % Open Source code for endangered languages
 
