--- a/5-case-studies.tex
+++ b/5-case-studies.tex
@@ -1,7 +1,11 @@
+% !TEX root = thesis.tex
 \section{Case Studies}\label{sec:case-studies}
 \subsection{Scottish Gaelic}
 
-Scottish Gaelic is a Celtic language spoken mainly in the United Kingdom, which UNESCO defines as {\it definitely endangered} \footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}}. %A large corpus compiled by the An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \cite{scannell2007crubadan}.
+Scottish Gaelic is a Celtic language spoken mainly in the United Kingdom, which UNESCO defines as {\it definitely endangered} \footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}}. Gaelic - sometimes called Scots Gaelic, simply Gaelic, or the Gaelic - is a Goidelic or Q-Celtic langauge, along with Manx and Irish (also sometimes called Irish Gaelic, but here always referred to as Irish). This means that, while related to the Brythonic languages of Welsh, Cornish and Breton, it is different enough to not be able to benefit from the many resources available in Welsh, which, while endangered, has a much stronger academic interest and presence in the United Kingdom, with roughly half a million speakers. 
+
+
+A large corpus compiled by the An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \citep{scannell2007crubadan}.
 
 As it is similar to Irish, it is a good example of how code from related languages can be used to bootstrap efforts to build code for its own language. I'll talk in depth about the language, its structure and grammar as related to code, its users and their use cases, and efforts to use code to make Scottish Gaelic digitally ascend.
 
