--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,17 @@
   year={2014}
 }
 
+@book{snyder2004practice,
+  title={The Practice of the Wild: Essays},
+  author={Snyder, G.},
+  isbn={9781593760168},
+  lccn={2003019878},
+  url={https://books.google.ca/books?id=Q-Gtg8S529AC},
+  year={2004},
+  publisher={Shoemaker \& Hoard}
+}
+
+
 @article{gilRiau,
   title={What is {Riau} {Indonesian}?},
   author={Gil, David},
