--- a/thesis.tex
+++ b/thesis.tex
@@ -66,11 +66,11 @@
 
 \newpage
 
-%%% Eidesstattliche ErklÃ¤rung
+%%% Eidesstattliche Erklärung
 \thispagestyle{empty}
 \noindent\textbf{Eidesstattliche Erkl\"arung}
 
-\noindent Hiermit erkl\"are ich, dass ich die vorliegende Arbeit selbststÃ¤ndig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel verwendet habe.\\
+\noindent Hiermit erkl\"are ich, dass ich die vorliegende Arbeit selbstst\"andig verfasst und keine anderen als die angegebenen Quellen und Hilfsmittel verwendet habe.\\
 
 \noindent\textbf{Declaration}
 
@@ -88,7 +88,7 @@
 
 \noindent Richard Littauer
 
-%%% Eidesstattliche ErklÃ¤rung End
+%%% Eidesstattliche Erklärung End
 
 \newpage
 %
