--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,71 @@
   year={2014}
 }
 
+@book{johnson2013language,
+  title={Language Policy},
+  author={Johnson, D},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{hanks2017policy,
+  title={Policy Barriers to Ainu Language Revitalization in Japan: When Globalization Means English},
+  author={Hanks, David H},
+  journal={Working Papers in Educational Linguistics (WPEL)},
+  volume={32},
+  number={1},
+  pages={5},
+  year={2017}
+}
+
+@book{okrent2009land,
+  title={In the land of invented languages: Esperanto rock stars, Klingon poets, Loglan lovers, and the mad dreamers who tried to build a perfect language},
+  author={Okrent, Arika},
+  year={2009},
+  publisher={Spiegel \& Grau}
+}
+
+
+@article{schreyer2011media,
+  title={Media, information technology, and language planning: what can endangered language communities learn from created language communities?},
+  author={Schreyer, Christine},
+  journal={Current Issues in Language Planning},
+  volume={12},
+  number={3},
+  pages={403--425},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
+@article{schreyer2015digital,
+  title={The digital fandom of Na'vi speakers.},
+  author={Schreyer, Christine},
+  journal={Transformative Works \& Cultures},
+  volume={18},
+  year={2015}
+}
+
+@article{scott2010language,
+  title={Language evolution in the laboratory},
+  author={Scott-Phillips, Thomas C and Kirby, Simon},
+  journal={Trends in cognitive sciences},
+  volume={14},
+  number={9},
+  pages={411--417},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{ratner2000beginning,
+  title={In the beginning was the wug: Forty years of language elicitation studies},
+  author={Ratner, Nan Bernstein and Menn, Lise},
+  journal={Methods for studying language production},
+  pages={11--26},
+  year={2000},
+  publisher={Lawrence Erlbaum Associates Mahwah}
+}
+
+
 @book{snyder2004practice,
   title={The Practice of the Wild: Essays},
   author={Snyder, G.},
